--- a/Part 2 - LLMs/10 - Agents.ipynb
+++ b/Part 2 - LLMs/10 - Agents.ipynb
@@ -269,6 +269,43 @@
     "### Exercício 2\n",
     "Crie um agente que conte a quantidade de ocorrências de uma determinada letra em uma palavra. Em seguida, teste o agente."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[HumanMessage(content='Quantas letras a existem na palavra avião?', additional_kwargs={}, response_metadata={}, id='1329d166-a466-475f-8b3e-8fbfc38f312e'), AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_nc2ETiFMLIfeq6PU8Bvfeg99', 'function': {'arguments': '{\"word\":\"avião\",\"char\":\"a\"}', 'name': 'char_count'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 20, 'prompt_tokens': 220, 'total_tokens': 240, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_72ed7ab54c', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-15ce7425-131b-4acd-906c-eeccc6871de3-0', tool_calls=[{'name': 'char_count', 'args': {'word': 'avião', 'char': 'a'}, 'id': 'call_nc2ETiFMLIfeq6PU8Bvfeg99', 'type': 'tool_call'}], usage_metadata={'input_tokens': 220, 'output_tokens': 20, 'total_tokens': 240, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}), ToolMessage(content='1', name='char_count', id='61e5238f-7b0b-4ff8-af20-592d6e5bb0ad', tool_call_id='call_nc2ETiFMLIfeq6PU8Bvfeg99'), AIMessage(content='Na palavra \"avião\", existe 1 letra \"a\".', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 15, 'prompt_tokens': 248, 'total_tokens': 263, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_72ed7ab54c', 'finish_reason': 'stop', 'logprobs': None}, id='run-d0326ea7-879e-45cf-a52f-4420128be356-0', usage_metadata={'input_tokens': 248, 'output_tokens': 15, 'total_tokens': 263, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]\n",
+      "Na palavra \"avião\", existe 1 letra \"a\".\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "@tool\n",
+    "def char_count(word: str, char: str) -> str:\n",
+    "    \"\"\"Conta a quantidade de ocorrências de uma letra em uma palavra\n",
+    "\n",
+    "    Args:\n",
+    "        word: palavra\n",
+    "    \"\"\"\n",
+    "    return word.count(char)\n",
+    "\n",
+    "tools.append(char_count)\n",
+    "agent_executor = create_react_agent(llm, tools)\n",
+    "response = agent_executor.invoke({\n",
+    "    \"messages\": [\n",
+    "        HumanMessage(\"Quantas letras a existem na palavra avião?\")\n",
+    "    ]\n",
+    "})\n",
+    "print(response[\"messages\"])\n",
+    "print(response[\"messages\"][-1].content)"
+   ]
   }
  ],
  "metadata": {
